syntax = "proto3";

service EnterpriseRpc {
    rpc GetProductWithStockItem (Barcode) returns (ProductWithStockItem) {}
}
message Barcode {
    int64 code = 1;
}
message ProductWithStockItem {
    int32 id = 1;
    double price = 2;
    
}